fix overflow a, li elements

--- a/css/program.css
+++ b/css/program.css
@@ -20,6 +20,9 @@ dd,b, dt {
   color: var(--color-secondary-dark);
 }
 
+a, li {
+  overflow-wrap: break-word;
+}
 
 h1 {
   margin-top: 3.5rem;
